fixing styling on mobile (zine, about)

--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -12,6 +12,7 @@
 
 .pageContainer[id='aboutpg'] .carousel .slider-wrapper {
   width: 70vw;
+  overflow: hidden;
 }
 
 .aboutSlideContainer {
@@ -20,7 +21,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
   color: white;
   text-align: left;
 }
@@ -154,14 +154,14 @@
     max-width: 100%;
     height: 90vh;
     max-height: 90vh;
-    transform: translateY(10%);
+    transform: translateY(5%);
   }
   .pageContainer[id='aboutpg'] .carousel .slider-wrapper {
     width: 100vw;
-    max-height: 65vh;
+    max-height: 70vh;
   }
   .aboutSlideContent {
-    margin-top: 10vh;
+    margin-top: 12vh;
     padding-left: 0vh;
   }
   .aboutSlideContent[id='slide1'] {
@@ -175,16 +175,21 @@
     row-gap: 2vh;
   }
   .aboutSlideContent[id='slide4'] {
-    margin-top: 10vh;
+    margin-top: 15vh;
   }
   .aboutSlideContent[id='slide5'] {
     margin-top: 15vh;
+  }
+  .aboutSlideContent[id='slide6'] {
+    margin-top: 15vh;
+    row-gap: 2vh;
   }
   .aboutSlideTitle h1 {
     font-size: 6vh;
   }
   .aboutSlideInfo {
     max-width: 80vw;
+    row-gap: 3vh;
   }
   .aboutSlideInfo h4 {
     font-size: 3vw;
@@ -208,5 +213,20 @@
   }
   .aboutSlideFootnote {
     max-width: 70vw;
+  }
+}
+
+@media screen and (max-width: 1400px) and (min-height: 1000px) and (max-height: 1400px) and (orientation: portrait) {
+  .pageContainer[id='aboutpg'] .carousel-root {
+    width: 100vw;
+    max-width: 100%;
+    height: 90vh;
+    max-height: 90vh;
+    transform: translateY(5%);
+  }
+  .pageContainer[id='aboutpg'] .carousel .slider-wrapper {
+    width: 100vw;
+    height: 80vh;
+    max-height: 80vh;
   }
 }
