--- a/src/pages/zine/Zine.css
+++ b/src/pages/zine/Zine.css
@@ -85,3 +85,23 @@
     transform: translate(100%, -100%);
   }
 }
+
+@media screen and (max-width: 1400px) and (min-height: 800px) and (max-height: 1400px) and (orientation: portrait) {
+  .pageContainer[id='zinepage'] {
+    transform: translateY(15%);
+  }
+  .carousel .slider-wrapper {
+    width: 80vw;
+    height: 100%;
+  }
+}
+
+@media screen and (max-width: 700px) and (max-height: 800px) and (orientation: portrait) {
+  .pageContainer[id='zinepage'] {
+    transform: translateY(15%);
+  }
+  .carousel .slider-wrapper {
+    width: 80vw;
+    height: 100%;
+  }
+}
